# tandoor-task

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: poetry.yml  python_linting.yml  python_tests.yml
tandoor_task/: justfile  pylintrc  tandoor_task.py
tandoor_task/tests/: test_basic.py
